<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="enable_service"
        android:summary="@string/pref_description_service"
        android:title="@string/pref_title_service" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="sensor_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_name_service" />
    <Preference android:title="@string/pref_title_scan"
        android:key="scan"
        android:summary="@string/pref_details_disconnected"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="enable_send"
        android:summary="@string/pref_description_service_update"
        android:title="@string/pref_title_service_update" />
</PreferenceScreen>
